--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,11 +1,188 @@
-﻿<section id="title"><h1>Page Title</h1></section>
-<section id="intro"><p>Introductory Text</p></section>
-<section id="content"><p>Page Content</p></section>
+﻿<style type="text/css" > 
+    #title {
+        color: white;
+        background-color: #191970;
+        display: inline-block;
+        width: 250px;
+        position: absolute;
+        bottom: 28px;
+        right: 22px;
+        clear: both;
+        height: 137px;
+    }
+    #title div {
+        position: absolute;
+        max-width: 230px;
+        bottom: 10px;
+        right: 10px;
+        text-align: right;
+    }
+    #title h1{
+        font-size: 2em;
+        font-weight: normal;
+        margin: 0;
+        line-height: 1.5em;
+    }
+    #subtitle {
+        margin: 0;
+        font-style: italic;
+    }
+    #greeting-image, #photo-gallery{
+        float: right;
+        margin: 0 2px 0 10px;
+    }
+    #greeting {
+        display: inline-block;
+        font-size: 3em;
+        font-weight: lighter;
+        color: purple;
+        max-width: 426px;
+        min-width: 230px;
+        text-align: right;
+        padding-right: 10px;
+    }
+    #greeting-image {
+        margin-top: 15px;
+    }
+    #photo-gallery a {
+        height: 285px;
+        width: 250px;
+    color: black;
+    display: inline-block;
+    text-decoration: none;
+        position: relative;
+        background-image: url('/Images/waterfall.jpg');
+    }
+    #menu-tiles {
+        margin-top: 20px;
+    }
+    #photo-gallery {
+        margin-top: 23px;
+    }
+    #menu-tiles {
+    -webkit-perspective: 800px;
+    -ms-perspective: 800px;
+    -moz-perspective: 800px;
+    perspective: 800px;
+    }
+    #menu-tiles a {
+        width: 137px;
+        height: 137px;
+        margin: 3px;
+        background-color: #4682b4;
+        color: white;
+        position: relative;
+        display: inline-block;
+        text-decoration: none;
+    }
+    #menu-tiles a span {
+        max-width: 114px;
+    }
+    #menu-tiles a span, #photo-gallery a span {
+        position: absolute;
+        right: 10px;
+        bottom: 10px;
+        max-width: 114px;
+        text-align: right;
+        cursor: hand;
+        cursor: pointer;
+    }
+    #menu-tiles a#tile-1, #menu-tiles a#tile-3 {
+        width: 285px;
+    }
+    #menu-tiles a#tile-1, #menu-tiles a#tile-3, #menu-tiles a#tile-5 {
+    -webkit-transform-origin-x: -8px;
+    }
+    #menu-tiles a#tile-6 {
+    -webkit-transform-origin-x: -130px;
+    }
+    #menu-tiles a#tile-2, #menu-tiles a#tile-4, #menu-tiles a#tile-7 {
+    -webkit-transform-origin-x: -260px;
+    }
+    #tile-1.rightRotate {
+        -webkit-transition: 200ms 0;
+        -moz-transition: 200ms 0;
+        -o-transition: 200ms 0;
+        transition: 200ms 0;
+    }
+    #tile-2.rightRotate {
+        -webkit-transition: 200ms 30ms;
+        -moz-transition: 200ms 30ms;
+        -o-transition: 200ms 30ms;
+        transition: 200ms 30ms;
+    }
+    #tile-3.rightRotate {
+        -webkit-transition: 200ms 60ms;
+        -moz-transition: 200ms 60ms;
+        -o-transition: 200ms 60ms;
+        transition: 200ms 60ms;
+    }
+    #tile-4.rightRotate {
+        -webkit-transition: 200ms 90ms;
+        -moz-transition: 200ms 90ms;
+        -o-transition: 200ms 90ms;
+        transition: 200ms 90ms;
+    }
+    #tile-5.rightRotate {
+        -webkit-transition: 200ms 120ms;
+        -moz-transition: 200ms 120ms;
+        -o-transition: 200ms 120ms;
+        transition: 200ms 120ms;
+    }
+    #tile-6.rightRotate {
+        -webkit-transition: 200ms 150ms;
+        -moz-transition: 200ms 150ms;
+        -o-transition: 200ms 150ms;
+        transition: 200ms 150ms;
+    }
+    #tile-7.rightRotate {
+        -webkit-transition: 200ms 180ms;
+        -moz-transition: 200ms 180ms;
+        -o-transition: 200ms 180ms;
+        transition: 200ms 180ms;
+    }
+    .leftRotate{
+        -webkit-transform: translate3d(0,0,0) rotateY(-90deg);
+        -moz-transform: translate3d(0,0,0) rotateY(-90deg);
+        -ms-transform: translate3d(0,0,0) rotateY(-90deg);
+        -o-transform: translate3d(0,0,0) rotateY(-90deg);
+        transform: translate3d(0,0,0) rotateY(-90deg);
+        opacity:0;
+    }
+    .rightRotate {
+        -webkit-transform: translate3d(0,0,0) rotateY(0);
+        -moz-transform: translate3d(0,0,0) rotateY(0);
+        -ms-transform: translate3d(0,0,0) rotateY(0);
+        -o-transform: translate3d(0,0,0) rotateY(0);
+        transform: translate3d(0,0,0) rotateY(0);
+        opacity: 1;
+    }
+</style>
+<section id="title">
+    <div>
+        <h1>Jason K. Carter</h1>
+        <p id="subtitle">(not the British actor)</p>
+    </div>
+</section>
+<section id="greeting-image"><img src="/Images/friendly-headshot.jpg" alt="Friendly Headshot" /></section>
+<section id="greeting">Welcome to my digital abode.</section>
+<section id="photo-gallery">
+    <a id="photo-gallery-tile" href="/Photos"><span>Photo Gallery</span></a>
+</section>
+<section id="menu-tiles">
+    <a id="tile-1" href="About-Me" class="leftRotate"><span>About Me</span></a>
+    <a id="tile-2" href="Gaming" class="leftRotate"><span>Gaming</span></a>
+    <a id="tile-3" href="Portfolio" class="leftRotate"><span>Portfolio</span></a>
+    <a id="tile-4" href="Outdoor-Activity" class="leftRotate"><span>Outdoor Activity</span></a>
+    <a id="tile-5" href="Online-Activity" class="leftRotate"><span>Online Activity</span></a>
+    <a id="tile-6" href="Blog" class="leftRotate"><span>Blog</span></a>
+    <a id="tile-7" href="Martial-Arts" class="leftRotate"><span>Martial Arts</span></a>
+</section>
 @section Scripts {
     <script type="text/javascript">
         require(["jquery"], function($) {
-            $(function() {
-                // Run jQuery scripts here
+            $(function () {
+                $('#menu-tiles a').addClass('rightRotate').removeClass('leftRotate');
             });
         });
     </script>
