--- a/Content/main.css
+++ b/Content/main.css
@@ -118,6 +118,57 @@ body {
     border-left: 2px solid #eee;
 }
 
+#title {
+    font-size: 0.7em;
+    color: white;
+    background-color: #191970;
+    width: 100%;
+    position: relative;
+}
+#title a {
+    color: white;
+    text-decoration: none;
+}
+
+#title div {
+    position: relative;
+    padding: 10px;
+    text-align: right;
+}
+
+#title h1 {
+    font-size: 2em;
+    font-weight: normal;
+    margin: 0;
+    line-height: 1.5em;
+}
+
+#subtitle {
+    margin: 0;
+    font-style: italic;
+}
+
+header {
+    font-size: 3em;
+    font-weight: lighter;
+    color: purple;
+    margin-left: 20px;
+    display: block;
+}
+#heading {
+    text-align: right;
+    width: 427px;
+    display: inline-block;
+    border-bottom: 3px solid purple;
+}
+#top-nav {
+    vertical-align: top;
+    height: 100%;
+    display: inline-block;
+    margin-left: 25px;
+    background-color: purple;
+}
+
 #body {
     -webkit-transform: translate3d(0,0,0);
     -ms-transform: translate3d(0,0,0);
@@ -129,12 +180,8 @@ body {
     -moz-transition-timing-function: ease-in-out;
     transition-timing-function: ease-in-out;
     padding: 20px;
+    position: relative;
     }
-
-
-
-
-
 
 
 
