--- a/Content/main.css
+++ b/Content/main.css
@@ -107,6 +107,26 @@ body {
 
 }
 
+h1,h2,h3,h4,h5 {
+    font-weight: 500;
+}
+
+h1 {
+    font-size: 1.5em;
+}
+h2 {
+    font-size: 1.4em;
+}
+h3 {
+    font-size: 1.3em;
+}
+h4 {
+    font-size: 1.2em;
+}
+h5 {
+    font-size: 1.1em;
+}
+
 #container {
     width: 742px;
     position: absolute;
@@ -141,11 +161,16 @@ body {
     font-weight: normal;
     margin: 0;
     line-height: 1.5em;
+    display: inline;
 }
 
 #subtitle {
     margin: 0;
     font-style: italic;
+    display: inline;
+    line-height: 1.5em;
+    vertical-align: text-bottom;
+    float: left;
 }
 
 header {
@@ -162,11 +187,14 @@ header {
     border-bottom: 3px solid purple;
 }
 #top-nav {
-    vertical-align: top;
+    text-align: right;
+    vertical-align: text-top;
+    width: 250px;
     height: 100%;
     display: inline-block;
-    margin-left: 25px;
+    margin-right: 20px;
     background-color: purple;
+    float: right;
 }
 
 #body {
@@ -295,8 +323,22 @@ header {
    Modify as content requires.
    ========================================================================== */
 
-@media only screen and (min-width: 35em) {
-    /* Style adjustments for viewports that meet the condition */
+@media (max-width: 741px) {
+    #container {
+        width: 100%;
+        font-size: 1em;
+        margin-left: 0;
+        left: 0;
+        border: 1px none;
+    }
+    #heading {
+        width: 100%;
+        margin-left:-20px;
+        margin-right: -20px;
+    }
+    #top-nav {
+        width: 100%;
+    }
 }
 
 @media only screen and (-webkit-min-device-pixel-ratio: 1.5),
