--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -7,15 +7,17 @@
     <section id="photo-gallery">
         <a id="photo-gallery-tile" href="http://www.flickr.com/photos/carterjk/sets"><span>Photo Gallery</span></a>
     </section>
-    <section id="menu-tiles">
-        <a id="tile-1" href="About-Me" class="leftRotate"><span>About Me</span></a>
-        <a id="tile-2" href="Gaming" class="leftRotate"><span>Gaming</span></a>
-        <a id="tile-3" href="Portfolio" class="leftRotate"><span>Portfolio</span></a>
-        <a id="tile-4" href="Outdoor-Activities" class="leftRotate"><span>Outdoor Activities</span></a>
-        <a id="tile-5" href="Social-Media" class="leftRotate"><span>Social Media</span></a>
-        <a id="tile-6" href="Blog" class="leftRotate"><span>Blog</span></a>
-        <a id="tile-7" href="Martial-Arts" class="leftRotate"><span>Martial Arts</span></a>
-    </section>    
+<section id="menu-tiles"
+    ><div id="featured-tiles"
+        ><a id="tile-1" href="About-Me" class="leftRotate"><span>About Me</span></a
+        ><a id="tile-2" href="Portfolio" class="leftRotate"><span>Portfolio</span></a
+    ></div
+    ><a id="tile-3" href="Gaming" class="leftRotate"><span>Gaming</span></a
+    ><a id="tile-4" href="Outdoor-Activities" class="leftRotate"><span>Outdoor Activities</span></a
+    ><a id="tile-5" href="Social-Media" class="leftRotate"><span>Social Media</span></a
+    ><a id="tile-6" href="Blog" class="leftRotate"><span>Blog</span></a
+    ><a id="tile-7" href="Martial-Arts" class="leftRotate"><span>Martial Arts</span></a
+></section>    
 @section Styles {
     @Styles.Render("~/Content/home.css")
 }
