Fix photo gallery float in IE versions < 8

--- a/Content/main.css
+++ b/Content/main.css
@@ -209,6 +209,7 @@ header {
     transition-timing-function: ease-in-out;
     padding: 20px;
     position: relative;
+    clear: both;
     }
 
 
@@ -324,6 +325,11 @@ header {
    ========================================================================== */
 
 @media (max-width: 741px) {
+    header {
+        width: 100%;
+        padding: 0;
+        margin: 0 -20px;
+    }
     #container {
         width: 100%;
         margin-left: 0;
@@ -331,13 +337,13 @@ header {
         border: 1px none;
     }
     #heading {
-        font-size: 2.3em;
         width: 100%;
-        margin-left:-20px;
-        margin-right: -20px;
+        font-size: 2.3em;
+        padding: 0 20px;
+        margin: 0 -20px;
     }
     #top-nav {
-        width: 100%;
+        display: none;
     }
 }
 @media (min-width: 637px) and (max-width: 741px) {
