--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,9 +1,8 @@
 ﻿@{
     ViewBag.Title = "Jason Carter's Home Page";
-    ViewBag.Subtitle = "(Note: not a British actor)";
-    ViewBag.Heading = "Welcome to my digital abode";
+    ViewBag.Heading = "Welcome to my digital playground";
 }
-@section Nav{<img src="/Images/friendly-headshot.jpg" alt="Friendly Headshot" />}
+@section Nav{<img src="/Images/joy-in-the-fall.jpg" alt="Friendly Headshot" />}
     <section id="photo-gallery">
         <a id="photo-gallery-tile" href="http://www.flickr.com/photos/carterjk/sets"><span>Photo Gallery</span></a>
     </section>
@@ -13,10 +12,10 @@
         ><a id="tile-2" href="Portfolio" class="leftRotate"><span>Portfolio</span></a
     ></div
     ><a id="tile-3" href="Gaming" class="leftRotate"><span>Gaming</span></a
-    ><a id="tile-4" href="Outdoor-Activities" class="leftRotate"><span>Outdoor Activities</span></a
-    ><a id="tile-5" href="Social-Media" class="leftRotate"><span>Social Media</span></a
-    ><a id="tile-6" href="Blog" class="leftRotate"><span>Blog</span></a
-    ><a id="tile-7" href="Martial-Arts" class="leftRotate"><span>Martial Arts</span></a
+    ><a id="tile-4" href="Blog" class="leftRotate"><span>Blog</span></a
+    ><a id="tile-5" href="Outdoor-Activities" class="leftRotate"><span>Outdoor Activities</span></a
+    ><a id="tile-6" href="Martial-Arts" class="leftRotate"><span>Martial Arts</span></a
+    ><a id="tile-7" href="Social-Media" class="leftRotate"><span>Social Media</span></a
 ></section>    
 @section Styles {
     @Styles.Render("~/Content/home.css")
