--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,10 +3,8 @@
     ViewBag.Heading = "Welcome to my digital playground";
 }
 @section Nav{<img src="/Images/joy-in-the-fall.jpg" alt="Friendly Headshot" />}
-    <section id="photo-gallery">
-        <a id="photo-gallery-tile" href="http://www.flickr.com/photos/carterjk/sets"><span>Photo Gallery</span></a>
-    </section>
-<section id="menu-tiles"
+<a id="photo-gallery-tile" href="http://www.flickr.com/photos/carterjk/sets"><span>Photo Gallery</span></a
+    ><section id="menu-tiles"
     ><div id="featured-tiles"
         ><a id="tile-1" href="About-Me" class="leftRotate"><span>About Me</span></a
         ><a id="tile-2" href="Portfolio" class="leftRotate"><span>Portfolio</span></a
