--- a/Content/home.css
+++ b/Content/home.css
@@ -155,6 +155,11 @@ header {
     transform: translate3d(0,0,0) rotateY(0);
     opacity: 1;
 }
+
+/* ==========================================================================
+   Media Queries for Responsive Design.
+   ========================================================================== */
+
 @media (max-width: 769px) {
     #photo-gallery-tile {
         height: 137px;
@@ -166,9 +171,6 @@ header {
     }
 }
 @media (max-width: 346px) {
-    #body {
-        padding-right: 20px;
-    }
     #photo-gallery-tile {
         height: 70px;
         width: 100%;
@@ -186,6 +188,71 @@ header {
         float: right;
     }
 }
+@media (min-width: 485px) and (max-width: 616px) {
+    #featured-tiles {
+        display: inline-block;
+        width: 286px;
+        float: left;
+        margin-right: 4px;
+    }
+}
+@media (min-width: 770px) {
+    #title {
+        font-size: 1em;
+        width: 282px;
+        position: absolute;
+        height: 137px;
+        top: 484px;
+        right: 22px;
+    }
+
+    #title div {
+        position: absolute;
+        max-width: 230px;
+        bottom: 10px;
+        right: 10px;
+        text-align: right;
+    }
+    header {
+        margin-left: 20px;
+    }
+    
+    #heading {
+        font-size: 2.6em;
+        text-align: right;
+        width: 427px;
+        min-height: 148px;
+        position: relative;
+    }
+    #heading span {
+        padding-right: 12px;
+        display: inline-block;
+        position: absolute;
+        right: 0;
+        bottom: 0;
+    }
+    #top-nav {
+        text-align: right;
+        vertical-align: text-top;
+        width: 282px;
+        height: 100%;
+        display: inline-block;
+        margin-right: 22px;
+        background-color: purple;
+        float: right;
+    }
+
+    #menu-tiles {
+        width: 435px;
+    }
+    #featured-tiles {
+        display: inline-block;
+        width: 286px;
+        float: left;
+        margin-right: 4px;
+    }
+}
+
 @media (min-width: 347px) and (max-width: 484px) {
     #body {
         width: 290px;
@@ -201,12 +268,6 @@ header {
         left: 50%;
         margin-left: -238px;
     }
-    #featured-tiles {
-        display: inline-block;
-        width: 286px;
-        float: left;
-        margin-right: 4px;
-    }
 }
 @media (min-width: 617px) and (max-width: 769px) {
     #body {
@@ -214,37 +275,5 @@ header {
         position: relative;
         left: 50%;
         margin-left: -311px;
-    }
-}
-@media (min-width: 770px) {
-    #title {
-        font-size: 1em;
-        width: 282px;
-        position: absolute;
-        height: 137px;
-        top: 488px;
-        right: 22px;
-    }
-
-    #title div {
-        position: absolute;
-        max-width: 230px;
-        bottom: 10px;
-        right: 10px;
-        text-align: right;
-    }
-
-    #subtitle {
-        float: none;
-    }
-
-    #menu-tiles {
-        width: 441px;
-    }
-    #featured-tiles {
-        display: inline-block;
-        width: 286px;
-        float: left;
-        margin-right: 4px;
     }
 }
