--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -16,7 +16,7 @@
     ><a id="tile-7" href="Social-Media" class="leftRotate"><span>Social Media</span></a
 ></section>    
 @section Styles {
-    @Styles.Render("~/Content/home.css")
+    @Styles.Render("~/Content/homecss")
 }
 @section Scripts {
     <script type="text/javascript">
