Make it responsive.

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,19 +1,19 @@
 ﻿@{
     ViewBag.Title = "Jason Carter's Home Page";
-    ViewBag.Heading = "Welcome to my digital playground";
+    ViewBag.Heading = "Welcome to my home page!";
 }
-@section Nav{<img src="/Images/joy-in-the-fall.jpg" alt="Friendly Headshot" />}
+@section Nav{<img src="/Content/Images/joy-in-the-fall.jpg" alt="Friendly Headshot" />}
 <a id="photo-gallery-tile" href="http://www.flickr.com/photos/carterjk/sets"><span>Photo Gallery</span></a
     ><section id="menu-tiles"
     ><div id="featured-tiles"
-        ><a id="tile-1" href="About-Me" class="leftRotate"><span>About Me</span></a
-        ><a id="tile-2" href="Portfolio" class="leftRotate"><span>Portfolio</span></a
+        ><a id="tile-1" href="/Blog" class="leftRotate"><span>Blog</span></a
+        ><a id="tile-2" href="http://www.linkedin.com/in/carterjk" class="leftRotate"><span>LinkedIn (Professional Profile)</span></a
     ></div
-    ><a id="tile-3" href="Gaming" class="leftRotate"><span>Gaming</span></a
-    ><a id="tile-4" href="Blog" class="leftRotate"><span>Blog</span></a
-    ><a id="tile-5" href="Outdoor-Activities" class="leftRotate"><span>Outdoor Activities</span></a
-    ><a id="tile-6" href="Martial-Arts" class="leftRotate"><span>Martial Arts</span></a
-    ><a id="tile-7" href="Social-Media" class="leftRotate"><span>Social Media</span></a
+    ><a id="tile-3" href="https://www.facebook.com/carter.jk" class="leftRotate"><span>Facebook</span></a
+    ><a id="tile-4" href="http://google.com/+JasonKCarter" class="leftRotate"><span>Google+</span></a
+    ><a id="tile-5" href="http://steamcommunity.com/id/silvereyes333" class="leftRotate"><span>PC Gaming (Steam Profile)</span></a
+    ><a id="tile-6" href="http://www.brooksmacenter.com/" class="leftRotate"><span>Martial Arts</span></a
+    ><a id="tile-7" href="https://github.com/jasonkcarter" class="leftRotate"><span>GitHub (Source Code)</span></a
 ></section>    
 @section Styles {
     @Styles.Render("~/Content/homecss")
