--- a/Content/main.css
+++ b/Content/main.css
@@ -101,7 +101,7 @@ body {
     margin-left: 2em;
     margin-right: 2em;
     background-color: #222222;
-    background-image: url(/Images/subtle_carbon.png);
+    background-image: url('../Content/Images/subtle_carbon.png');
     background-position: bottom center;
     background-repeat: repeat;
 
@@ -113,6 +113,7 @@ h1,h2,h3,h4,h5 {
 
 h1 {
     font-size: 1.5em;
+    margin-bottom: 0;
 }
 h2 {
     font-size: 1.4em;
@@ -170,6 +171,10 @@ header {
     display: block;
 }
 
+a, a:visited {
+    color: purple;
+}
+
 #heading {
     display: inline-block;
     font-size: 2.3em;
@@ -207,8 +212,27 @@ header {
     }
 
 
+/* Content lists and details */
+
+.content-items { padding: 0; margin: 0; list-style: none; }
+.content-items li { padding: 0; margin: 0; }
+.content-items .content-item { border-bottom: 1px solid #dbdbdb; }
+.metadata .published {
+    display: inline;
+    margin: 0 6px 0 0;
+    font-size: 1em;
+    color: #999999;
+}
 
 
+/* Pager
+***************************************************************/
+
+.pager { list-style: none; padding: 0; margin: 12px 0 0 0; }
+.pager li { float: left; padding: 0 12px 0 0; margin: 0; }
+.pager a, .pager span { font-size: 1.077em; display: block; background-color: #dbdbdb; padding: 6px 6px; color: #434343;}
+.pager a:hover { background-color: #434343; color: #fff; }
+.pager span { background-color:inherit; }
 
 
 /* ==========================================================================
@@ -374,11 +398,6 @@ header {
     #body {
         padding-right: 20px;
     }
-}
-
-@media only screen and (-webkit-min-device-pixel-ratio: 1.5),
-       only screen and (min-resolution: 144dpi) {
-    /* Style adjustments for high resolution devices */
 }
 
 /* ==========================================================================
