--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -6,8 +6,8 @@
 <a id="photo-gallery-tile" href="http://www.flickr.com/photos/carterjk/sets"><span>Photo Gallery</span></a
     ><section id="menu-tiles"
     ><div id="featured-tiles"
-        ><a id="tile-1" href="/Blog" class="leftRotate"><span>Blog</span></a
-        ><a id="tile-2" href="http://www.linkedin.com/in/carterjk" class="leftRotate"><span>LinkedIn (Professional Profile)</span></a
+         ><span id="tile-1" class="leftRotate"><span>Blog (offline)</span></span
+         ><a id="tile-2" href="http://www.linkedin.com/in/carterjk" class="leftRotate"><span>LinkedIn (Professional Profile)</span></a
     ></div
     ><a id="tile-3" href="https://www.facebook.com/carter.jk" class="leftRotate"><span>Facebook</span></a
     ><a id="tile-4" href="http://google.com/+JasonKCarter" class="leftRotate"><span>Google+</span></a
@@ -22,9 +22,9 @@
     <script type="text/javascript">
         require(["jquery"], function($) {
             $(function () {
-                $('#menu-tiles a').addClass('rightRotate').removeClass('leftRotate');
+                $('#menu-tiles .leftRotate').addClass('rightRotate').removeClass('leftRotate');
         setTimeout(function() {
-            $('#menu-tiles a').removeClass('rightRotate');
+            $('#menu-tiles .rightRotate').removeClass('rightRotate');
         }, 400);
             });
         });
